--- a/Stock/Stock.Web/Views/Home/Login.cshtml
+++ b/Stock/Stock.Web/Views/Home/Login.cshtml
@@ -48,8 +48,8 @@
                     //输出data
                     if (result.code == 1) {
 
-                        //alert("登录成功")
-                        //页面跳转
+                        alert("登录成功");
+                        
                         location.href = "/Home/main";
 
                     }
