用户列表初略显示

--- a/Stock/Stock.Web/Views/Home/Main.cshtml
+++ b/Stock/Stock.Web/Views/Home/Main.cshtml
@@ -111,7 +111,7 @@
                     <a href="javascript:;"><i class="layui-icon iconfont">&#xe613;</i>  <cite>管理</cite><i class="iconfont icon-xialajiantou float-r pr-0"></i></a>
                     <ul class="sub-menu">
                         <li>
-                            <a _href="/user/List2" _id="user_list2"><cite>管理员用户列表</cite></a>
+                            <a _href="/user/List" _id="user_list"><cite>管理员用户列表</cite></a>
                         </li>
 
                         <li>
